--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html,
+body,
+#root {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #005a87;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2 {
+	color: #fff;
+	font-weight: 700;
+	font-size: 1.7rem;
+}
+
+form {
+	background-color: #eee;
+	border-radius: 28px;
+}
+
+label {
+	font-weight: bold;
+}
+
+.container {
+	padding: auto;
+	justify-content: center;
+	align-items: center;
+}
+
+#btnRegistro {
+	background-color: #047e2d;
+	border: none;
 }
